Change icons in IconsConfig, BottomMenu, SideMenu screens

--- a/app/src/main/res/layout/activity_bottom_menu_config.xml
+++ b/app/src/main/res/layout/activity_bottom_menu_config.xml
@@ -202,6 +202,83 @@
                     app:customIconSpinner="@{R.array.dropdown_live_chat_icon_array}" />
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10sdp"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <com.example.corechatoperationconfigapp.customviews.CustomEditText
+                    android:id="@+id/et_waiting"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="@string/bottom_menu_name"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:padding="@dimen/_5sdp"
+                    android:text="@string/waiting"
+                    android:textColor="@color/darkGray"
+                    android:textSize="@dimen/small_text_size"
+                    app:customEditTextFont="@string/Roboto_LightItalic" />
+
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/spinner_waiting"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_spinner"
+                    android:dropDownWidth="match_parent"
+                    android:entries="@array/dropdown_waiting_icon_array"
+                    android:overlapAnchor="false"
+                    android:spinnerMode="dropdown"
+                    app:customIconSpinner="@{R.array.dropdown_waiting_icon_array}" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10sdp"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <com.example.corechatoperationconfigapp.customviews.CustomEditText
+                    android:id="@+id/et_notification"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="@string/bottom_menu_name"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:padding="@dimen/_5sdp"
+                    android:text="@string/notification"
+                    android:textColor="@color/darkGray"
+                    android:textSize="@dimen/small_text_size"
+                    app:customEditTextFont="@string/Roboto_LightItalic" />
+
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/spinner_notification"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_spinner"
+                    android:dropDownWidth="match_parent"
+                    android:entries="@array/dropdown_notification_icon_array"
+                    android:overlapAnchor="false"
+                    android:spinnerMode="dropdown"
+                    app:customIconSpinner="@{R.array.dropdown_notification_icon_array}" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <RelativeLayout
